--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_package/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_package/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_package/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicon_package/site.webmanifest">
-    <link rel="mask-icon" href="/img/favicon_package/safari-pinned-tab.svg" color="#4b97df">
-    <link rel="shortcut icon" href="/img/favicon_package/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_package/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_package/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_package/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon_package/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon_package/safari-pinned-tab.svg" color="#4b97df">
+    <link rel="shortcut icon" href="./img/favicon_package/favicon.ico">
     <meta name="msapplication-TileColor" content="#2d89ef">
-    <meta name="msapplication-config" content="/img/favicon_package/browserconfig.xml">
+    <meta name="msapplication-config" content="./img/favicon_package/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <script src="jquery-3.7.1.min.js"></script>
